# chrome2linkedin

./: .gitignore  CLAUDE.md  README.md
extension/: manifest.json  popup.css  popup.html  popup.js
helper/: Cargo.toml
helper/src/: main.rs
